[package]
name = "jbot"
version = "0.1.0"
authors = ["Jeremy Blythe <jblythe@evertz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1"
warp = "0.3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.13"